--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,31 @@
-apply plugin: 'java' 
-apply plugin: 'eclipse' 
-
-repositories {
-    mavenCentral()
+buildscript {
+	ext {
+		springBootVersion = '2.0.1.RELEASE'
+	}
+	repositories {
+		mavenCentral()
+	}
+	dependencies {
+		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+	}
 }
 
-dependencies {
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
-	compile group: 'org.springframework', name: 'spring-context', version: '4.1.2.RELEASE'
-	compile group: 'org.springframework', name: 'spring-core', version: '4.1.2.RELEASE'
-	compile group: 'org.springframework', name: 'spring-beans', version: '4.1.2.RELEASE'
-	
-    compile group: 'org.apache.activemq', name: 'activemq-core', version: '5.7.0'
-    
-    testCompile group: 'junit', name: 'junit', version: '4.5'
+group = 'com.example'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = 1.8
+
+repositories {
+	mavenCentral()
+}
+
+
+dependencies {
+	compile('org.springframework.boot:spring-boot-starter')
+	testCompile('org.springframework.boot:spring-boot-starter-test')
+	compile group: 'org.apache.activemq', name: 'activemq-core', version: '5.7.0'
 }
